--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,12 @@
 body{
     background-color: rgb(86, 115, 196);
 }
+
+#mio_id{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    border: 2px solid yellow;
+    border-radius: 10px;
+    color: white;
+}
